<resources>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quality_pref_key</string>
    <string name="quality_pref_mobile_data_key" translatable="false">quality_pref_mobile_data_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key2</string>
    <string name="android_tv_interface_off_seek_key" translatable="false">android_tv_interface_off_seek_key</string>
    <string name="android_tv_interface_on_seek_key" translatable="false">android_tv_interface_on_seek_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="autoplay_next_key" translatable="false">autoplay_next_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="jsdelivr_proxy_key" translatable="false">jsdelivr_proxy_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="download_parallel_key" translatable="false">download_parallel_key</string>
    <string name="download_concurrent_key" translatable="false">download_concurrent_key</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key_2</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="override_site_key" translatable="false">override_site_key</string>
    <string name="enable_skip_op_from_database" translatable="false">enable_skip_op_from_database</string>
    <string name="title_downloads">Downloads</string>
    <string name="pref_disable_acra">Disable automatic bug reporting</string>
    <string name="show_log_cat">Show Logcat 🐈</string>
    <string name="picture_in_picture">Picture-in-picture</string>
    <string name="picture_in_picture_des">Continues playback in a miniature player on top of other apps</string>
    <string name="player_size_settings">Player resize button</string>
    <string name="player_size_settings_des">Remove the black borders</string>
    <string name="player_subtitles_settings">Subtitles</string>
    <string name="player_subtitles_settings_des">Player subtitles settings</string>
    <string name="chromecast_subtitles_settings">Chromecast Subtitles</string>
    <string name="chromecast_subtitles_settings_des">Chromecast subtitles settings</string>
    <string name="eigengraumode_settings">Playback speed</string>
    <string name="swipe_to_seek_settings">Swipe to seek</string>
    <string name="swipe_to_seek_settings_des">Swipe from side to side to control your position in a video</string>
    <string name="swipe_to_change_settings">Swipe to change settings</string>
    <string name="swipe_to_change_settings_des">Slide up or down on the left or right side to change brightness or volume</string>
    <string name="autoplay_next_settings">Autoplay next episode</string>
    <string name="autoplay_next_settings_des">Start the next episode when the current one ends</string>
    <string name="double_tap_to_seek_settings">Double tap to seek</string>
    <string name="double_tap_to_pause_settings">Double tap to pause</string>
    <string name="double_tap_to_seek_amount_settings">Player seek amount (Seconds)</string>
    <string name="double_tap_to_seek_settings_des">Tap twice on the right or left side to seek forwards or backwards
    </string>
    <string name="double_tap_to_pause_settings_des">Tap twice in the middle to pause</string>
    <string name="episode_sync_settings">Update watch progress</string>
    <string name="episode_sync_settings_des">Automatically sync your current episode progress</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="backup_settings">Back up data</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_des">Gives you the search results separated by provider</string>
    <string name="bug_report_settings_off">Only sends data on crashes</string>
    <string name="bug_report_settings_on">Sends no data</string>
    <string name="show_fillers_settings">Show filler episode for anime</string>
    <string name="updates_settings">Show app updates</string>
    <string name="updates_settings_des">Automatically search for new updates after starting the app.</string>
    <string name="uprereleases_settings">Update to prereleases</string>
    <string name="uprereleases_settings_des">Search for prerelease updates instead of full releases only</string>
    <string name="github">Github</string>
    <string name="lightnovel">Light novel app by the same devs</string>
    <string name="discord">Join Discord</string>
    <string name="benene">Give a benene to the devs</string>
    <string name="benene_des">Given benene</string>
    <string name="app_language">App Language</string>
    <string name="poster_ui_settings">Toggle UI elements on poster</string>
    <string name="check_for_update">Check for Update</string>
    <string name="video_skip_op">Skip OP</string>
    <string name="watch_quality_pref">Preferred watch quality (WiFi)</string>
    <string name="watch_quality_pref_data">Preferred watch quality (Mobile Data)</string>
    <string name="limit_title">Video player title max chars</string>
    <string name="limit_title_rez">Video player resolution</string>
    <string name="video_buffer_size_settings">Video buffer size</string>
    <string name="video_buffer_length_settings">Video buffer length</string>
    <string name="video_buffer_disk_settings">Video cache on disk</string>
    <string name="video_buffer_clear_settings">Clear video and image cache</string>
    <string name="android_tv_interface_on_seek_settings">Player Shown - Seek Amount</string>
    <string name="android_tv_interface_on_seek_settings_summary">The seek amount used when the player is visible</string>
    <string name="android_tv_interface_off_seek_settings">Player Hidden - Seek Amount</string>
    <string name="android_tv_interface_off_seek_settings_summary">The seek amount used when the player is hidden</string>
    <string name="video_ram_description">Causes crashes if set too high on devices with low memory, such as Android TV.</string>
    <string name="video_disk_description">Causes problems if set too high on devices with low storage space, such as Android TV.</string>
    <string name="dns_pref">DNS over HTTPS</string>
    <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
    <string name="jsdelivr_proxy">GitHub Proxy</string>
    <string name="jsdelivr_proxy_summary">Bypass blocking of raw github URLs using jsDelivr. May cause updates to be delayed by few days.</string>
    <string name="add_site_pref">Clone site</string>
    <string name="add_site_summary">Add a clone of an existing site, with a different URL</string>
    <string name="download_path_pref">Download path</string>
    <string name="display_subbed_dubbed_settings">Display Dubbed/Subbed Anime</string>
    <string name="legal_notice">Disclaimer</string>
    <string name="legal_notice_key" translatable="false">legal_notice_key</string>
    <string name="pref_category_bypass">ISP Bypasses</string>
    <string name="pref_category_links">Links</string>
    <string name="pref_category_cache">Cache</string>
    <string name="pref_category_android_tv">Android TV</string>
    <string name="pref_category_gestures">Gestures</string>
    <string name="pref_category_player_features">Player features</string>
    <string name="pref_category_subtitles">Subtitles</string>
    <string name="pref_category_player_layout">Layout</string>
    <string name="pref_category_defaults">Defaults</string>
    <string name="random_button_settings">Random Button</string>
    <string name="random_button_settings_desc">Show random button on Homepage and Library</string>
    <string name="provider_lang_settings">Extension languages</string>
    <string name="app_layout">App Layout</string>
    <string name="preferred_media_settings">Preferred media</string>
    <string name="primary_color_settings">Primary color</string>
    <string name="app_theme_settings">App theme</string>
    <string name="bottom_title_settings">Poster title location</string>
    <string name="bottom_title_settings_des">Put the title under the poster</string>
    <string name="anilist_key" translatable="false">anilist_key</string>
    <string name="mal_key" translatable="false">mal_key</string>
    <string name="player_pref">Preferred video player</string>
    <string name="enable_skip_op_from_database_des">Show skip popups for opening/ending</string>
    <string name="battery_dialog_title">Disable Battery optimization</string>
    <string name="battery_optimisation_key" translatable="false">battery_optimisation</string>
    <string name="cs3wiki">CloudStream Wiki</string>
    <string name="download_parallel_settings_des">How many different items that can be downloaded in parallel</string>
    <string name="parallel_downloads">Parallel downloads</string>
    <string name="concurrent_connections">Concurrent connections</string>
    <string name="concurrent_connections_settings_des">How many concurrent connections each download can use while downloading</string>
</resources>